# Learn_CGAL

./: .gitignore  CMakeLists.txt  Makefile  README.md  boundingbox.cpp  main.cu  pixel.cpp  raycasting.cpp  readfile.cpp
Algorithms/Douglas-Peucker/: Douglas-Peucker.cpp  Note.md
Basic/: basic_002.cpp  basic_003.cpp  basic_005.cpp
HalfedgeDS/: hds_prog_vector.cpp
IO/: OBJ.cpp  OFF.cpp
Point_set_2/: nearest_neighbor.cpp
Polygon/: Polygon.cpp  Polygon_algorithms.cpp
SpatialIndex/: AABBTree.cpp  Octree.cpp  QuadTree.cpp  QuadTree_exp.cpp
SpatialIndex/note/: AABBTree.md  SpatialIndex.md
basic/: basic_001.cpp
